# KOKESort

./: .gitignore  CMakeLists.txt  CMakePresets.json  KOKESort.c  KOKESort.h  MANIFEST.in  README.md  clean-packaging-outputs.ps1  cmocka-install.bat  install-latest-packaged-python-library.ps1  install-ninja-source.sh  install-ninja.ps1  install.bat  package-python-library.ps1  package.bat  package.sh  pyproject.toml  setup.py
.github/workflows/: cmake-multi-platform.yml
fut/: build.bat  build.sh  download.bat  download.sh  install.bat  install.sh  main.fu  rebuild.bat
highlevel/KOKESort/: KOKESort.sln
highlevel/KOKESort/KOKESort/: SortV1.cs
highlevel/KOKESort/KOKESort.Example/: KOKESort.Example.csproj  Program.cs
highlevel/KOKESort/KOKESort.ExampleInterop/: Interop.cs  Program.cs
highlevel/KOKESort/UnitTests/: SortV1Tests.cs  UnitTests.csproj
highlevel/KOKESort/UnitTests.Domain/: AddElementToSortedArrayTestSet.cs  GetInsertIndexBSTestSet.cs  SortTestSet.cs  TestSet.cs
highlevel/KOKESort/UnitTests.Generator/: Program.cs  UnitTests.ManualGenerator.csproj
mutator/KOKEMutator/: KOKEMutator.sln
mutator/KOKEMutator/KOKEMutator/: AppMain.cs  ClangSharpExtensions.cs  KOKEMutator.csproj  MutatedFileWriter.cs  Mutation.cs  MutationKind.cs  MutationTool.cs  Mutator.cs  Options.cs  Program.cs
src/: CMakeLists.txt  Config.h  Doxyfile  Global.c  Global.h  KOKESort.c  KOKESort.h  KOKESortV2.c  KOKESortV2.h  KOKESortV2Parallel.c  KOKESortV2Parallel.h  LICENSE.txt  SecureFunctions.h  build.ps1  build.sh  buildandbench.bat  builddocs.bat  buildwithmutationtest.bat  buildwithtest.bat  clean.bat  clean.ps1  csv.c  csv.h  cthreads.c  cthreads.h  install_gui_modules.bat  pseudocode.txt  run_bench.bat  visualize.bat
src/benchmark/: CMakeLists.txt  generator.py  main.c  ubench.h
src/benchmarkr2/: CMakeLists.txt  advtime.c  advtime.h  file.c  file.h  main.c  main.cpp
src/benchmarkr3/: CMakeLists.txt  config.hpp  cwrappersys.hpp  main.cpp  sortsys.hpp  test.json
src/examples/voting-app/: admin.html  generator.py  index.html  main.js  map.js  names.csv  result.html  run.py  style.css  styles.css  surnames.csv  vote.html
src/examples/voting-app/backend/: api.py
src/examples/voting-app/backend/data/: state.example.json  state.json  voters.example.json  voters.json
src/generator/: clear.bat  generator.py  param-generator.py
src/parts/: bubblesort.c  bubblesort.h  heapsort.c  heapsort.h  insertionsort.c  insertionsort.h  master.h  mergesort.c  mergesort.h  quicksort.c  quicksort.h  selectionsort.c  selectionsort.h  sort.c  sort.h
src/pybindwrapper/: CMakeLists.txt  clean.bat  fix.py  install.sh  package.bat  package.sh  pyproject.toml  setup.cfg  setup.py  test.py  wrapper.hpp
src/pybindwrapper/src/: wrapper.cpp  wrapper.hpp
src/pybindwrapper/test/: init.py  test.bat  test.py  test.sh  test2.py
src/restaurant-app/: CMakeLists.txt  main.cpp
src/templates/: MasterHeader.h.in  TypeBasedGenerator.c.in  TypeBasedGenerator.h.in
src/tests/: CMakeLists.txt  CsvTest.c  CsvTest.txt  CsvWayTest.c  FindInsertIndexBSTest.c  FindInsertIndexBSTest.txt  FindInsertIndexBSWayTest.c  FreeMemoryTest.c  InsertToSortedArrayTest.c  InsertToSortedArrayTest.txt  InsertToSortedArrayWayTest.c  SortFnTest.c  SortV1SelfTest.c  SortV1SelfTest.txt  SortV1Test.c  SortV1Test.txt  SortV1WayTest.c  SortV2ParallelTest.c  SortV2Test.c  TestGlobal.h  mutant_wrapper.py
src/visualizer/: requirements.txt  visualizer.py
templates/: TypeBasedGenerator.c.in
tests/: CMakeLists.txt  FindInsertIndexBSTest.c  GetInsertIndexTest.c  InsertToSortedArrayTest.c  SortV1Test.c  SortV2Test.c  SortV2Test.txt  TestGlobal.h
visualize/: sortCompare.js  sortSelf.js  sortSelf2.js
